--- a/src/Components/Navigations/navigation.module.css
+++ b/src/Components/Navigations/navigation.module.css
@@ -3,7 +3,7 @@
   background-color: rgb(223, 217, 217);
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .link {
