--- a/src/Components/Form/Form.module.css
+++ b/src/Components/Form/Form.module.css
@@ -1,7 +1,7 @@
 .form {
   border: 2px solid grey;
   width: 400px;
-  height: 150px;
+  margin-bottom: 20px;
   display: flex;
   flex-direction: column;
   padding: 20px 20px;
@@ -13,6 +13,8 @@
 }
 
 .btn {
+  font-size: 15px;
   width: 150px;
+  height: 30px;
   margin-top: auto;
 }
