--- a/src/Components/Navigations/navigation.module.css
+++ b/src/Components/Navigations/navigation.module.css
@@ -1,6 +1,11 @@
 .header {
   margin-bottom: 20px;
-  background-color: rgb(223, 217, 217);
+  background: rgb(229, 232, 21);
+  background: linear-gradient(
+    263deg,
+    rgba(229, 232, 21, 1) 31%,
+    rgba(7, 242, 8, 1) 100%
+  );
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -13,6 +18,10 @@
   font-weight: 500;
   color: rgb(17, 15, 15);
   font-size: 18px;
+}
+
+.link:hover {
+  transform: scale(1.2);
 }
 
 .active {
